# cv-2016

./: .gitignore  CMakeLists.txt  README.md
ntable/: NTable.java  startup.sh
ronaktest/: CMakeCache.txt  Makefile  cmake_install.cmake
ronaktest/src/: Makefile  cv_a1
src/: AppConfig.cpp  AppConfig.hpp  CMakeLists.txt  CmdLineInterface.cpp  CmdLineInterface.hpp  GUIManager.cpp  GUIManager.hpp  NetworkController.cpp  NetworkController.hpp  Target.cpp  Target.hpp  TargetDetector.cpp  TargetDetector.hpp  TargetProcessor.cpp  TargetProcessor.hpp  VideoDevice.cpp  VideoDevice.hpp  cv-2016.cpp  cv_a1.cpp  cv_a2.cpp  cv_b.cpp  main.cpp  target.hpp.save
